Registration and login done

--- a/login.html
+++ b/login.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="log.css" />
     <title>Login Page</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <form class="box" action="index.html" method="get">
+      <h1>Login</h1>
+      <input type="text" placeholder="Username" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Login" />
+      <p>If you do not have an account please create it <a href="index.html">here.</a></p>
+    </form>
+  </body>
 </html>
