--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <input type="email"  placeholder="Enter Your e-mail">
         <input type="text"  placeholder="Username">
         <input type="password"  placeholder="Password">
-<input type="submit" value="Register">
-<p>If you have registered please login <a href="login.html">here.</a></p>
-
+<input type="submit" value="Register" href="Time.html" >
+<!-- <p>If you have registered please login <a href="login.html">here.</a></p>
+<p>Or you can visit our time AI<a >Here.</a></p> -->
     </form>
     
 </body>
