final change for netlify to work

--- a/Time.html
+++ b/Time.html
@@ -40,6 +40,6 @@
     <button onclick="runSpeechRecognition()">Get the Time</button> &nbsp; <span id="action"></span></p>
     <div id="output" class="hide"></div>
     <div id="response" class="hide"></div>
-<script src="../ufs-what-is-the-time/time.js"></script>
+<script src="time.js"></script>
 </body>
 </html>
