--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="email"  placeholder="Enter Your e-mail">
         <input type="text"  placeholder="Username">
         <input type="password"  placeholder="Password">
-<input type="submit" value="Register" href="Time.html">
+ <a href="Time.html"><input type="button" value="Register"></a> 
 <!-- <p>If you have registered please login <a href="login.html">here.</a></p>
 <p>Or you can visit our time AI<a >Here.</a></p> -->
     </form>
